# edgelist-mapper

./: Pipfile  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  python.yml
edgelist_mapper/: utils.py
src/: compute_frequency.py  generate_mapping.py  map_edgelist.py  utils.py
src/main/: utils.py
src/tests/.fixtures/cities-s1/: entities_mapping.tsv
tests/.fixtures/cities-s1/: mapped_edgelist.tsv  relations_mapping.tsv
