[tool.poetry]
name = "edgelist-converter"
version = "0.1.0"
description = "Convert an edgelist file into a more compact format"
authors = ["Simone Primarosa <simonepri@outlook.com>"]
license = "MIT"

[tool.taskipy.tasks]
python = "env PYTHONPATH=src python -B"
lint = "poetry run task python -m pylint src --max-line-length 80 -v --output-format colorized --disable duplicate-code,bad-continuation,too-many-locals,too-many-arguments"
types = "poetry run task python -m mypy src"
format = "poetry run task python -m black src --line-length 80"
test = "poetry run task python -m pytest src/tests --showlocals --cov=src/main --cov-report=term-missing:skip-covered"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.0"
black = "~19.10b0"
pylint = "^2.4.4"
mypy = "~0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
